--- a/.env
+++ b/.env
@@ -1,13 +1,11 @@
-# MySQL
-MYSQLDB_HOST=mysql
+MYSQLDB_HOST=mysqldb
 MYSQLDB_USER=root
 MYSQLDB_PASSWORD=
+MYSQLDB_ROOT_PASSWORD=
 MYSQLDB_DATABASE=4tech
 
-# Local port for MySQL and Docker port mapping
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
 
-# Node.js ports (Local and Docker)
 NODE_LOCAL_PORT=3000
 NODE_DOCKER_PORT=3000
